--- a/4-portfolio.css
+++ b/4-portfolio.css
@@ -25,22 +25,39 @@ body{
     color: white;
     border-style:solid;
     border-color:white;
+    background-color: rgb(71, 71, 71);
     border-width:2px;
     text-indent: 20px;
-    font-style: normal;
+    font-style: bold;
     font-size: 14px;
-    margin: 10px;
     list-style-type:circle;
     list-style-position:inside;
     position:sticky;
     position: -webkit-sticky;
     top:0;
-    padding:7px;
-    width:90%;
+    width:98%;
 }
+
+#Main_Label{
+    font-size: 40px;
+    color: white;
+    border-color: white;
+    border-width: 2px;
+}
+
+.Main_Nav_Button{
+    height: 50px;
+    border-width: 4px;
+    border-color: black;
+}
+
+.Main_Nav_Button:active{
+    background-color: black;
+    color: white;
+}
+
 #list1:hover{
-    background-color: rgb(71, 71, 71);
-    border-color:rgb(71, 71, 71);
+    background-color: rgb(46, 45, 45);
 }
 #link1{
     color: white;
