--- a/4-portfolio.css
+++ b/4-portfolio.css
@@ -8,10 +8,14 @@ body{
     background-color:  rgb(66, 66, 66);
     color:white;
     font-family:arial;
+    font-size:30px;
+    padding-left: 5px;
 }
 #subheading{
     color:white;
     font-family:arial;
+    font-size:20px;
+    padding-left: 5px;
 }
 #bio{
     color:white;
@@ -22,6 +26,7 @@ body{
     color: white;
 
 }
+
 #Main_Label{
     font-size: 40px;
     color: white;
@@ -35,21 +40,33 @@ body{
     border-color:white;
     background-color: rgb(71, 71, 71);
     border-width:2px;
-    text-indent: 20px;
     font-style: bold;
     font-size: 14px;
     list-style-type:circle;
-    list-style-position:inside;
-    position:sticky;
-    position: -webkit-sticky;
+    list-style-position: inside;
+    position:inside;
     top:0;
-    width:98%;
+    width:265px;
+    padding-left: 5px;
 }
 
 .Main_Nav_Button{
     height: 50px;
     border-width: 4px;
     border-color: black;
+}
+#message_input{
+    row-gap: 200px;
+    min-width: auto;
+    padding-left: 5px;
+}
+
+#contact_div{
+    offset-distance: 5px;
+}
+
+#main_form{
+    padding-left: 5px;
 }
 
 .Main_Nav_Button:active{
